# string2sign

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ul_prime.h  ul_sign.h  util.h
src/: sign.cpp  ul_prime.cpp  ul_sign.cpp
